# free_stock

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  main.py  observe_decisions.py  pyproject.toml  run_verify.ps1  scheduler.py  test.py
.github/: pull_request_template.md
Proposal/: 量化交易系统规划书.md
config/: sim_account.example.yaml
docs/: auto-sell-runtime.md  e2e-acceptance-report.md  market-analysis-runtime.md
docs/Proposal/: 量化交易系统规划书.md
scripts/: backfill_turnover_rate_history.py  query_smoke_test.py  verify_gm_api.py  verify_gm_api_winreg.py
src/gmtrade_live/: __init__.py  app_runner.py  bootstrap.py  config.py  errors.py  logging_setup.py  market_models.py  models.py  precision.py  runtime_scheduler.py  session.py  state.py
tests/: conftest.py
tests/debug/: test_check_connectivity.py  test_manual_trade.py  test_market_close_report_preview.py
tests/integration/: test_auto_sell_integration.py  test_decision_observer_integration.py  test_m0_connectivity_service.py  test_m1_manual_trade_service.py  test_m2_dry_run_integration.py  test_m3_execution_integration.py
tests/smoke/: test_auto_sell_smoke.py  test_m4_local_smoke.py
tests/unit/: test_app_runner.py  test_auto_sell_models.py  test_auto_sell_service.py  test_bootstrap.py  test_callback_handler.py  test_config.py  test_config_runtime_flags.py  test_decision_models.py  test_decision_observer.py  test_gm_history_market_gateway.py  test_hot_stock_resolver.py  test_m1_manual_trade.py  test_m2_decision_engine.py  test_m2_dry_run.py  test_m2_models.py  test_main.py  (+27 more)
tools/: __init__.py
(+75 files in other folders)
